--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - wget https://github.com/google/protobuf/releases/download/v3.4.1/protobuf-python-3.4.1.tar.gz
   - tar -xzvf protobuf-python-3.4.1.tar.gz
   - cd protobuf-3.4.1
-  - ./configure
+  - ./configure --prefix=/usr
   - make
   - sudo make install
   - cd ..
