--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,6 @@ include LICENSE
 include MAINTAINERS
 include Makefile
 include github.com/gogo/protobuf/gogoproto/gogo.proto
+include gopkg.in/bblfsh/sdk.v1/protocol/generated.proto
+include gopkg.in/bblfsh/sdk.v1/uast/generated.proto
+prune bblfsh/libuast
