--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,4 +7,5 @@ include Makefile
 include github.com/gogo/protobuf/gogoproto/gogo.proto
 include gopkg.in/bblfsh/sdk.v1/protocol/generated.proto
 include gopkg.in/bblfsh/sdk.v1/uast/generated.proto
+include bblfsh/memtracker.h
 prune bblfsh/libuast
