Rework setup.py to be portable
- Replace calls to coreutils with equivalent Python APIs
- os.path.join

Signed-off-by: Vadim Markovtsev <vadim@sourced.tech>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - sudo dpkg -i protobuf-python_3.4.1-1_amd64.deb
   - pip3 install --upgrade pip
   - pip3 install -r requirements.txt
-  - python3 setup.py --getdeps
+  - python3 setup.py --getdeps --log
   - pip3 install . --upgrade
 script:
   - python3 setup.py build_ext -i
