--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - python3 setup.py --getdeps --log
   - pip3 install . --upgrade
   - if [[ -z "$TRAVIS_TAG" ]]; then exit 0; fi
+  - if [[ $TRAVIS_PYTHON_VERSION != '3.6' ]]; then exit 0; fi # disable double uploads to pypi
   - echo "[distutils]" > .pypirc
   - echo "index-servers = " >> .pypirc
   - echo "  pypi" >> .pypirc
