--- a/.travis.yml
+++ b/.travis.yml
@@ -20,17 +20,16 @@ install:
   - pip3 install -r requirements.txt
   - python3 setup.py --getdeps --log
   - pip3 install . --upgrade
-  - cd bblfsh && python3 -m unittest discover
+  - cd bblfsh && python3 -m unittest discover && cd ..
   - if [[ -z "$TRAVIS_TAG" ]]; then exit 0; fi
   - if [[ $TRAVIS_PYTHON_VERSION != '3.6' ]]; then exit 0; fi # disable double uploads to pypi
-  - echo "[distutils]" > .pypirc
-  - echo "index-servers = " >> .pypirc
-  - echo "  pypi" >> .pypirc
-  - echo "[pypi]" >> .pypirc
-  - echo "username=$PYPI_USER" >> .pypirc
-  - echo "password=$PYPI_PASS" >> .pypirc
-  - cd ..
-  - HOME=. python setup.py sdist upload
+  - echo "[distutils]" > $HOME/.pypirc
+  - echo "index-servers = " >> $HOME/.pypirc
+  - echo "  pypi" >> $HOME/.pypirc
+  - echo "[pypi]" >> $HOME/.pypirc
+  - echo "username=$PYPI_USER" >> $HOME/.pypirc
+  - echo "password=$PYPI_PASS" >> $HOME/.pypirc
+  - python setup.py sdist upload
 script:
   - python3 setup.py build_ext -i
 notifications:
